--- a/GoIT/markup/js_19-20/bower.json
+++ b/GoIT/markup/js_19-20/bower.json
@@ -19,6 +19,7 @@
     "jquery": "2.*",
     "fa-scss-plus": "^1.0.0",
     "reset-css": "^2.0.2011012603",
-    "lodash": "^4.5.0"
+    "lodash": "^4.5.0",
+    "FlexSlider-Scss": "http://github.com/Studio-40/FlexSlider-Scss.git#^1.0.0"
   }
 }
