--- a/GoIT/markup/js_21-22/package.json
+++ b/GoIT/markup/js_21-22/package.json
@@ -9,7 +9,12 @@
   "author": "Nikita Lovygin",
   "license": "ISC",
   "devDependencies": {
+    "babel-preset-es2015": "^6.6.0",
     "chai": "^3.5.0",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-mocha": "^2.2.0",
+    "gulp-watch": "^4.3.5",
     "mocha": "^2.4.5"
   }
 }
