--- a/GoIT/markup/js_exam/bower.json
+++ b/GoIT/markup/js_exam/bower.json
@@ -16,9 +16,7 @@
     "jquery": "1.9.1",
     "isotope": "^2.2.2",
     "reset-css": "^2.0.2011012603",
-    "jcarousel": "^0.3.4",
-    "html5shiv": "^3.7.3",
-    "respond": "https://github.com/scottjehl/Respond.git#^1.4.2"
+    "jcarousel": "^0.3.4"
   },
   "devDependencies": {}
 }
